2017-06-02 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-693

	* src/rte.cc (get_ppath_scat_source):
	Remove scaling of scat source per scat element with its pnd, ie
	outputting scat source one single particle of each element. Removes
	requirement of separately calculating and storing dppath_scat_source.
	For jacobians, do NOT skip pha_mat_spt and ppath_scat_source calcs for
	pnd=0.
	Bugfix in incoming field p-interpolation.

	* src/m_fos.cc (iyHybrid):
	Some code for layer bulk source calculation for applying in scat
	source in RT solution.

	* src/rt4.cc:
	Layout fixes for a couple of error/info messages.
	
2017-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-692

	* src/m_cloudradar.cc (yCloudRadarNew): New version of
	yCloudRadar, not yet active.

	* src/sensor.cc (integration_bin_by_vecmult): Varoius changes, now
	seems to work. And now also handles decreasing grids.

2017-06-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-691

	* src/m_fos.cc (iyHybrid), rte.[cc,h] (get_ppath_scat_source):
	Moved all scat source calculation stuff into an individual function.

2017-06-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-690

	* src/m_fos.cc (iyHybrid):
	Implemented scat source term calculation (not jacobians capable yet).

2017-06-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-689

	* src/sensor.cc (integration_bin_by_vecmult): New function. So far
	just coding, no testing done.

	(sensor_integration_vector2): Removed this
	function. It was not used in any way. Seems that it was an old
	version of the function, before normalisation of x_f was
	introduced.

	(summation_by_vecmult):
	(integration_func_by_vecmult): Renaming of two old functions. They
	before started with sensor_, but they are not limited to sensor
	calculations.

	* src/sensor.cc: Changes in sevaral functions due to renaming above.

2017-06-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-688

	* src/rt4.cc: